--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,14 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
 
+:root {
+  --base-color: #ef4444;
+  --base-color-darker: #dc2626;
+
+  --dark-color: #1c1b20;
+  --dark-text: #f8f8f8;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -51,13 +59,27 @@ img {
   height: auto;
 }
 
+/* .swiper {
+  width: 100%;
+  height: 45vh;
+} */
+
+.swiper-pagination-bullet-active {
+  background-color: #dc2626 !important;
+}
+
+
 .shadow-custom {
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 @layer components {
+  .swiper {
+    @apply w-full h-[55vh] md:h-[45vh] xl:h-[50vh]
+  }
+
   .link-header {
-    @apply flex flex-col justify-center items-center gap-2 font-medium hover:text-red-400;
+    @apply flex flex-col justify-center items-center gap-2 font-medium dark:text-[color:var(--dark-text)] hover:text-[color:var(--base-color)];
   }
 
   .button-custom {
@@ -73,11 +95,11 @@ img {
   }
 
   .section-template {
-    @apply w-full py-[6rem] md:py-[2rem] xl:h-[90vh] m-auto flex flex-col h-full items-center justify-center;
+    @apply w-full py-[6rem] md:py-[2rem] m-auto flex flex-col h-full items-center justify-center;
   }
 
   .tab-qualification-active {
-    @apply flex flex-col md:flex-row items-center gap-1 text-base md:text-xl text-red-500 font-medium cursor-pointer
+    @apply flex flex-col md:flex-row items-center gap-1 text-base md:text-xl text-[color:var(--base-color)] font-medium cursor-pointer
   }
 
   .tab-qualification {
